# my-microgpt

./: .gitignore  README.md  README_MECH_INT.md  concept_fran_layer1.json  concept_fran_layer2.json  model_e16_h4_l3_s32033.json  pyproject.toml
src/my_microgpt/: __init__.py  architecture.py  autograd.py  concept_vectors.py  dataset.py  inference.py  mc_helpers.py  parameters.py  steered_inference.py  storage.py  tokenization.py  training.py
tests/: test_architecture.py  test_autograd.py  test_dataset.py  test_inference.py  test_parameters.py  test_storage.py  test_tokenization.py  test_training.py
