[project]
name = "my-microgpt"
version = "0.1.0"
description = "Playing with AK's micro gpt-based architecture"
readme = "README.md"
authors = [
    { name = "Francisco Perez-Sorrosal", email = "fperezsorrosal@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
]

[project.scripts]
dataset = "my_microgpt.dataset:main"
tokenization = "my_microgpt.tokenization:main"
autograd = "my_microgpt.autograd:main"
parameters = "my_microgpt.parameters:main"
architecture = "my_microgpt.architecture:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
